<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="@dimen/activity_top_toolbar_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_search_history"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/searchHistoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history_btn_text"
        android:id="@+id/clearHistoryBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/red"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="5dp"
        />


</RelativeLayout>